# serializer version: 1
# name: test_SwiftSRGAN_2x
  SRModelDescriptor(
    architecture='Swift-SRGAN',
    input_channels=3,
    output_channels=3,
    scale=2,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '16nb',
    ]),
  )
# ---
# name: test_SwiftSRGAN_4x
  SRModelDescriptor(
    architecture='Swift-SRGAN',
    input_channels=3,
    output_channels=3,
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      '16nb',
    ]),
  )
# ---
